; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_view.c_escape_pango_markup.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_view.c_escape_pango_markup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @escape_pango_markup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @escape_pango_markup(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i64 @escape_markup_text(i8* %5, i8* null)
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = add i64 %7, 1
  %9 = call i8* @calloc(i64 %8, i32 1)
  store i8* %9, i8** %4, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i64 @escape_markup_text(i8* %10, i8* %11)
  %13 = load i8*, i8** %4, align 8
  ret i8* %13
}

declare dso_local i64 @escape_markup_text(i8*, i8*) #1

declare dso_local i8* @calloc(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
